--- a/Oblakoo/Oblakoo.csproj
+++ b/Oblakoo/Oblakoo.csproj
@@ -113,7 +113,6 @@
     <Compile Include="AsyncTaskManager.cs" />
     <Compile Include="AsyncTaskProgressEventArgs.cs" />
     <Compile Include="AsyncTaskState.cs" />
-    <Compile Include="AsyncTaskType.cs" />
     <Compile Include="AuthenticationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -127,7 +126,6 @@
     <Compile Include="CreateDirectoryForm.Designer.cs">
       <DependentUpon>CreateDirectoryForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="CreateFolderTask.cs" />
     <Compile Include="Drive.cs" />
     <Compile Include="DriveFile.cs" />
     <Compile Include="DriveType.cs" />
@@ -149,6 +147,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage.cs" />
     <Compile Include="StorageFile.cs" />
+    <Compile Include="Tasks\CreateFolderTask.cs" />
+    <Compile Include="Tasks\DownloadFileFromDriveTask.cs" />
+    <Compile Include="Tasks\DownloadFileFromStorageTask.cs" />
+    <Compile Include="Tasks\DownloadFileTask.cs" />
+    <Compile Include="Tasks\DownloadFolderFromDriveTask.cs" />
+    <Compile Include="Tasks\DownloadFolderTask.cs" />
+    <Compile Include="Tasks\UploadFileTask.cs" />
+    <Compile Include="Tasks\UploadFolderTask.cs" />
     <Compile Include="TransferDirection.cs" />
     <Compile Include="TransferProgressEventArgs.cs" />
     <EmbeddedResource Include="AccountForm.resx">
@@ -191,6 +197,7 @@
   <ItemGroup>
     <None Include="Resources\gray.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
