--- a/Oblakoo/Oblakoo.csproj
+++ b/Oblakoo/Oblakoo.csproj
@@ -148,9 +148,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage.cs" />
     <Compile Include="StorageFile.cs" />
+    <Compile Include="AsyncTaskParentsMode.cs" />
     <Compile Include="Tasks\CreateFolderTask.cs" />
+    <Compile Include="Tasks\DeleteEmptyFolderTask.cs" />
     <Compile Include="Tasks\DeleteFileTask.cs" />
     <Compile Include="Tasks\DeleteFolderTask.cs" />
+    <Compile Include="Tasks\DeleteFolderTaskBase.cs" />
     <Compile Include="Tasks\DownloadFileFromDriveTask.cs" />
     <Compile Include="Tasks\DownloadFileFromStorageTask.cs" />
     <Compile Include="Tasks\DownloadFileTask.cs" />
