--- a/Oblakoo/Oblakoo.csproj
+++ b/Oblakoo/Oblakoo.csproj
@@ -96,8 +96,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Account.cs" />
-    <Compile Include="AccountFile.cs" />
+    <Compile Include="Core\Account.cs" />
+    <Compile Include="Core\AccountFile.cs" />
     <Compile Include="AccountInfo.cs" />
     <Compile Include="AccountForm.cs">
       <SubType>Form</SubType>
@@ -108,29 +108,29 @@
     <Compile Include="AccountManager.cs" />
     <Compile Include="ActionIfFileExists.cs" />
     <Compile Include="Amazon\GlacierFile.cs" />
-    <Compile Include="AsyncTask.cs" />
-    <Compile Include="AsyncTaskEventArgs.cs" />
-    <Compile Include="AsyncTaskManager.cs" />
-    <Compile Include="AsyncTaskProgressEventArgs.cs" />
-    <Compile Include="AsyncTaskState.cs" />
+    <Compile Include="Tasks\AsyncTask.cs" />
+    <Compile Include="Tasks\AsyncTaskEventArgs.cs" />
+    <Compile Include="Tasks\AsyncTaskManager.cs" />
+    <Compile Include="Tasks\AsyncTaskProgressEventArgs.cs" />
+    <Compile Include="Tasks\AsyncTaskState.cs" />
     <Compile Include="AuthenticationForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="AuthenticationForm.Designer.cs">
       <DependentUpon>AuthenticationForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Common.cs" />
+    <Compile Include="Core\Common.cs" />
     <Compile Include="CreateDirectoryForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="CreateDirectoryForm.Designer.cs">
       <DependentUpon>CreateDirectoryForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Drive.cs" />
-    <Compile Include="DriveFile.cs" />
-    <Compile Include="DriveType.cs" />
+    <Compile Include="Core\Drive.cs" />
+    <Compile Include="Core\DriveFile.cs" />
+    <Compile Include="Core\DriveType.cs" />
     <Compile Include="Amazon\Glacier.cs" />
-    <Compile Include="ExceptionEventArgs.cs" />
+    <Compile Include="Tasks\ExceptionEventArgs.cs" />
     <Compile Include="ExceptionForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -142,7 +142,7 @@
     <Compile Include="Google\GoogleItemKinds.cs" />
     <Compile Include="Google\GoogleFileList.cs" />
     <Compile Include="Google\GoogleMimeTypes.cs" />
-    <Compile Include="ImageType.cs" />
+    <Compile Include="Core\ImageType.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -150,13 +150,12 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ObserverStream.cs" />
-    <Compile Include="StandardImageResolution.cs" />
-    <Compile Include="TaskException.cs" />
+    <Compile Include="Core\TaskException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Storage.cs" />
-    <Compile Include="StorageFile.cs" />
-    <Compile Include="AsyncTaskParentsMode.cs" />
+    <Compile Include="Core\Storage.cs" />
+    <Compile Include="Core\StorageFile.cs" />
+    <Compile Include="Tasks\AsyncTaskParentsMode.cs" />
     <Compile Include="Tasks\CreateFolderTask.cs" />
     <Compile Include="Tasks\DeleteEmptyFolderTask.cs" />
     <Compile Include="Tasks\DeleteFileTask.cs" />
@@ -170,8 +169,7 @@
     <Compile Include="Tasks\DownloadFolderTask.cs" />
     <Compile Include="Tasks\UploadFileTask.cs" />
     <Compile Include="Tasks\UploadFolderTask.cs" />
-    <Compile Include="TransferDirection.cs" />
-    <Compile Include="TransferProgress.cs" />
+    <Compile Include="Core\TransferProgress.cs" />
     <EmbeddedResource Include="AccountForm.resx">
       <DependentUpon>AccountForm.cs</DependentUpon>
     </EmbeddedResource>
