--- a/Oblakoo/Oblakoo.csproj
+++ b/Oblakoo/Oblakoo.csproj
@@ -96,6 +96,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Amazon\GlacierFileIdentity.cs" />
     <Compile Include="Core\Account.cs" />
     <Compile Include="Core\AccountFile.cs" />
     <Compile Include="AccountInfo.cs" />
@@ -108,6 +109,7 @@
     <Compile Include="AccountManager.cs" />
     <Compile Include="ActionIfFileExists.cs" />
     <Compile Include="Amazon\GlacierFile.cs" />
+    <Compile Include="Core\StorageFileIdentity.cs" />
     <Compile Include="Tasks\AsyncTask.cs" />
     <Compile Include="Tasks\AsyncTaskEventArgs.cs" />
     <Compile Include="Tasks\AsyncTaskManager.cs" />
@@ -130,6 +132,7 @@
     <Compile Include="Core\DriveFile.cs" />
     <Compile Include="Core\DriveType.cs" />
     <Compile Include="Amazon\Glacier.cs" />
+    <Compile Include="Tasks\EmptyTask.cs" />
     <Compile Include="Tasks\ExceptionEventArgs.cs" />
     <Compile Include="ExceptionForm.cs">
       <SubType>Form</SubType>
@@ -167,7 +170,6 @@
     <Compile Include="Tasks\DownloadFolderFromDriveTask.cs" />
     <Compile Include="Tasks\DownloadFolderFromStorageTask.cs" />
     <Compile Include="Tasks\DownloadFolderTask.cs" />
-    <Compile Include="Tasks\StartupSettings\TaskStartupSettings.cs" />
     <Compile Include="Tasks\UploadFileTask.cs" />
     <Compile Include="Tasks\UploadFolderTask.cs" />
     <Compile Include="Core\TransferProgress.cs" />
