--- a/Oblqo/Oblqo.csproj
+++ b/Oblqo/Oblqo.csproj
@@ -114,7 +114,9 @@
     <Compile Include="ActionIfFileExists.cs" />
     <Compile Include="Amazon\GlacierFile.cs" />
     <Compile Include="Core\ConnectionException.cs" />
+    <Compile Include="Core\DriveCollection.cs" />
     <Compile Include="Core\DriveFileCollection.cs" />
+    <Compile Include="Core\IDrive.cs" />
     <Compile Include="Core\IDriveFile.cs" />
     <Compile Include="Core\MimeTypes.cs" />
     <Compile Include="Core\StorageFileIdentity.cs" />
