--- a/Oblqo/Oblqo.csproj
+++ b/Oblqo/Oblqo.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Tasks\DownloadFolderFromDriveTask.cs" />
     <Compile Include="Tasks\DownloadFolderFromStorageTask.cs" />
     <Compile Include="Tasks\DownloadFolderTask.cs" />
+    <Compile Include="Tasks\RequestGlacierInventoryTask.cs" />
     <Compile Include="Tasks\SynchronizeFileTask.cs" />
     <Compile Include="Tasks\SynchronizeFolderTask.cs" />
     <Compile Include="Tasks\UploadFileTask.cs" />
