--- a/OblqoTest/OblqoTest.csproj
+++ b/OblqoTest/OblqoTest.csproj
@@ -55,6 +55,7 @@
     <Compile Include="AccountTest.cs" />
     <Compile Include="AsyncTaskManagerTest.cs" />
     <Compile Include="AsyncTaskTest.cs" />
+    <Compile Include="MockConfigurationStorage.cs" />
     <Compile Include="TestEnvironment.cs" />
     <Compile Include="MockDrive.cs" />
     <Compile Include="MockDriveFile.cs" />
