--- a/Oblqo/packages.config
+++ b/Oblqo/packages.config
@@ -5,6 +5,7 @@
   <package id="Google.Apis.Auth" version="1.9.0" targetFramework="net45" />
   <package id="Google.Apis.Core" version="1.9.0" targetFramework="net45" />
   <package id="Google.Apis.Drive.v2" version="1.9.0.1540" targetFramework="net45" />
+  <package id="Google.GData.Client" version="2.2.0.0" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
