--- a/Oblqo/packages.config
+++ b/Oblqo/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
+  <package id="NReco.VideoConverter" version="1.0.8.0" targetFramework="net45" />
   <package id="UnidecodeSharpFork" version="1.0.0" targetFramework="net45" />
   <package id="Zlib.Portable" version="1.11.0" targetFramework="net45" />
   <package id="Zlib.Portable.Signed" version="1.11.0" targetFramework="net45" />
